# usd-search

./: .coveragerc  .coveragerc-container-test  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICE.md  docker-compose.gpu-plugins.yml  docker-compose.local-fs.yml  docker-compose.local-s3.yml  docker-compose.s3proxy-auth.yml  docker-compose.staging-hybrid.yml  docker-compose.vlm-plugins.yml  docker-compose.web-ui.yml  docker-compose.yml  format.sh  lint.sh  logging.yml  pyproject.toml
docker/: Dockerfile.explorer  Dockerfile.kit  Dockerfile.openapi-merge  Dockerfile.siglip2-triton  Dockerfile.siglip2-triton.local  Dockerfile.usdsearch  Dockerfile.usdsearch.python.3.12-bookworm-base
docs/: README.md  agent-skills.md  asset-download.md  beta.md  configuration-map.md  containers.md  development.md  local-deployment.md  models-and-config.md  search-filters.md  search_research_playbook.md  usd-property-catalog.md  vlm-validation.md
scripts/: build-ci-images.sh  codex-smoke.sh  (+8 more)
services/asset-graph/: README.md  pyproject.toml
services/asset-graph-builder/: pyproject.toml
services/asset-graph-builder/graph_builder/: __init__.py  service.py  usd_deps_kit.py
services/asset-graph/asset_graph_service/: graph_processing.py  logging.py  vector_utils.py
services/asset-graph/asset_graph_service/api/: __init__.py  auth.py  dependencies.py  endpoints.py  exceptions.py  healthchecks.py  models.py  profiling.py  tracing.py  uvicorn.py
services/asset-graph/asset_graph_service/db/: __init__.py  models.py  neo4j.py  utils.py
services/crawlers/: pyproject.toml
services/crawlers/crawlers/src/: base.py  config.py  data.py  exceptions.py  indexing.py  indexing_cron.py  tag_crawler.py  tag_crawler_cron.py
services/deepsearch-crawler/: .gitignore  .gitmodules  CHANGELOG.md  PACKAGE-INFO.yaml  README.md  add_license.sh  build.sh  collect-licenses.sh  pyproject.toml
services/deepsearch-crawler/deepsearch_crawler/: __init__.py  config.py  consumer.py  crawler.py  exceptions.py  main.py  utils.py
services/deepsearch-crawler/intergration/: docker-compose.yml
services/deepsearch-monitor/: pyproject.toml
services/deepsearch-monitor/monitor/src/: .gitignore  __init__.py  config.py  data.py  logging_utils.py  monitor_crawler.py  monitor_crawler_cron.py  monitor_omni_writer.py  monitor_worker.py
services/deepsearch-monitor/monitor/src/cli/: embedding_liveness_check.py  storage_liveness_check.py
services/deepsearch-monitor/monitor/src/configuration/: deployment.yaml  plugin.config.yaml
services/deepsearch_api/: loader.sh  pyproject.toml
services/deepsearch_api/deepsearch_api/: README.md  _constants.py  auth.py  config.py  exceptions.py  health.py  logging.yml  main.py  models.py  telemetry_decorator.py  telemetry_otel.py  tracing.py  utils.py
services/deepsearch_api/deepsearch_api/llm_parse/: __init__.py  config.py  extractor.py  fields.py  grounding.py  mapper.py  models.py  router.py  search_fields.yaml
services/deepsearch_api/deepsearch_api/llm_parse/prompts/: llm_parsing_system_prompt.txt
services/deepsearch_api/deepsearch_api/routers_v2/: ags.py  ags_models.py  authorization.py  dependencies.py  models.py  search.py  service.py
services/deepsearch_api/deepsearch_api/routers_v3/: download.py  images.py  search_v3.py
services/deepsearch_api/deepsearch_api/search_backend/: __init__.py  compat.py  embeddings.py  exceptions.py  filtered.py  image_loader.py  main.py  models.py  models_extra.py  response_models.py  utils.py
services/deepsearch_api/deepsearch_api/validation/: __init__.py  config.py  validator.py
services/fs-watcher/: Dockerfile  README.md  pyproject.toml
services/fs-watcher/fs_watcher/: main.py
services/info-endpoint/: pyproject.toml
services/info-endpoint/info_endpoint/src/: README.md  config.py  main.py
services/info-endpoint/info_endpoint/src/api/: backend.py  clients.py  exceptions.py  health.py  indexing.py  models.py  plugin_info.py  processing.py  utils.py
services/rendering-job/: .dockerignore  README.md  config.packman.xml  pyproject.toml
services/rendering-job/data/: entrypoint.sh  startup.sh
services/rendering-job/data/usd/: ShaderKnob_only_v4.usd  scene.usd  shaderknob.usda
services/rendering-job/deepsearch_rendering_job/: __init__.py  __main__.py  auth.py  exceptions.py  kit.py  logging.yml  models.py  render.py  secure_pickle.py  transport.py  utils.py
services/rendering-job/deepsearch_rendering_job/api/: README.md  auth.py  config.py  health.py  info.py  main.py  models.py  utils.py
services/rendering-job/deepsearch_rendering_job/api/mdl/: __init__.py  models.py  render.py
services/rendering-job/deepsearch_rendering_job/api/usdsearch/: __init__.py  models.py  render.py
services/rendering-job/exts/omni.services.deepsearch.rendering/: premake5.lua
services/rendering-job/exts/omni.services.deepsearch.rendering/config/: extension.toml  scene_config.toml
services/rendering-job/exts/omni.services.deepsearch.rendering/docs/: CHANGELOG.md  README.md  index.rst
services/rendering-job/exts/omni.services.deepsearch.rendering/omni/services/deepsearch/rendering/: __init__.py  python_ext.py
services/rendering-job/exts/omni.services.deepsearch.rendering/omni/services/deepsearch/rendering/helpers/: __init__.py  cache_utils.py  data.py  exceptions.py  log_utils.py  misc_utils.py  syntheticdata_async.py  transport.py  utils.py  view_renderer.py
services/rendering-job/exts/omni.services.deepsearch.rendering/omni/services/deepsearch/rendering/services/: __init__.py  data.py  rendering.py  utils.py
services/siglip2-triton/docker/: build.sh  deploy.sh  publish.sh  pyproject.toml  requirements.txt
services/storage/: pyproject.toml
services/storage/storage/src/: config.py  models.py  run_cron.py
services/storage/storage/src/client/: __init__.py
services/storage/storage/src/configuration/: deployment.yaml
services/storage/storage/src/services/: config.py  exceptions.py  ngsearch_storage_service.py
(+1491 files in other folders)
