[project]
name = "asset-graph-service"
dynamic = ["version"]
description = "Neo4j-backed USD scene graph service — spatial queries, dependency tracking, REST API"
authors = [
    {name = "Rafal Wytrykus", email = "rwytrykus@nvidia.com"},
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "base-logging",
    "fastapi>=0.104.1",
    "neo4j>=5.14.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.3",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0.1",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "numpy>=1.26.3,<2",
    "asgi-correlation-id>=4.3.0",
    "pyinstrument>=4.6.2",
    "tenacity>=8.2.3",
    "sentry-sdk[fastapi]>=1.40.4",
    "aiohttp>=3.9.5",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-grpc>=0.46b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.46b0",
    "fastapi-swagger>=0.2.3",
    "protobuf>=4.25.8",
    "h11>=0.16.0",
    "setuptools>=65.5.1",
    "typing-extensions>=4.9.0",
    "search-utils",
]

[dependency-groups]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.1",
    "requests>=2.31.0",
    "authlib>=1.7.2",
    "cryptography>=42.0.5",
]

[tool.uv]
package = true

[tool.uv.sources]
search-utils = { workspace = true }
base-logging = { workspace = true }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.1.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["asset_graph_service"]
