[project]
name = "deepsearch-api"
dynamic = ["version"]
description = "DeepSearch user-facing search API — V2/V3 FastAPI endpoints, hybrid vector+text search, VLM validation"
authors = [
    {name = "Nikola Spasojevic", email = "nspasojevic@nvidia.com"},
    {name = "Rafal Wytrykus", email = "rwytrykus@nvidia.com"},
    {name = "Artem Rozantsev", email = "arozantsev@nvidia.com"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "base-logging",
    "search-utils[storage-api,pillow,search-backend]",
    "asset-graph-client",
    "siglip2-triton-client>=0.3.0",
    "vision-endpoint[siglip2]>=0.13.0",
    "openai>=0.28.0",
    "fastapi>=0.115.0",
    "starlette>=0.40.0",
    "uvicorn>=0.28.0",
    "asgi-correlation-id>=4.3.1",
    "async-lru>=2.0.4",
    "tenacity>=8.2.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.7.0",
    "numpy>=1.26.4,<2",
    "pillow>=10.2.0",
    "opensearch-py>=3.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.11.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asgi>=0.46b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.46b0",
    "opentelemetry-instrumentation-grpc>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-semantic-conventions>=0.46b0",
    "typing-extensions>=4.9.0",
    "setuptools>=65.5.1",
    "click>=8.1.7",
    "h11>=0.12.0",
    "httptools>=0.5.0",
]

[dependency-groups]
test = [
    "pytest>=7.3.1",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
    "anybadge>=1.14.0",
    "pytest-cov>=4.0.0",
    "coverage-badge>=1.1.0",
    "pytest-rerunfailures>=11.1.2",
    "coverage>=7.2.3",
    "pytest-xdist>=3.2.1",
    "greenlet>=3.0.1",
    "requests>=2.31.0",
]

[tool.uv]
package = true

[tool.uv.sources]
search-utils = { workspace = true }
asset-graph-client = { workspace = true }
siglip2-triton-client = { workspace = true }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.1.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["deepsearch_api"]
