[project]
name = "fs-watcher"
version = "0.1.0"
description = "Filesystem watcher that triggers USD Search reindexing on file changes"
authors = [
    {name = "NVIDIA Corporation"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "watchfiles>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
