[project]
name = "deepsearch-rendering-job"
dynamic = ["version"]
description = "DeepSearch rendering job service — GPU FastAPI + Kit subprocess workers for USD thumbnail rendering"
authors = [
    {name = "Artem Rozantsev", email = "arozantsev@nvidia.com"},
    {name = "Ted Asiamah", email = "tasiamah@nvidia.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "jinja2>=3.1.6",
    "fire>=0.6.0",
    "pydantic<2",
    "typing-extensions>=4.9.0",
    "pyyaml>=6.0.1",
    "pymysql>=1.1.1",
    "aiomysql>=0.3.2",
    "redis>=5.0.8",
    "pillow>=12.2.0",
    "setuptools>=78.1.1",
    "sentry-sdk>=2.14.0",
    "starlette>=0.50.0",  # capped <1.0 transitively by pydantic<2 (fastapi w/ starlette 1.x needs pydantic>=2.7)
    "fastapi>=0.125.0",  # capped by pydantic<2 (fastapi>0.125 needs pydantic>=2.7)
    "python-multipart>=0.0.27",
    "websockets>=12.0",
    "cachetools>=5.3.3",
    "uvicorn>=0.34.3",
    "numpy>=1.26.4",
    "httpx>=0.28.1",
    "authlib>=1.7.2",
    "async-lru>=2.0.2",
    "cryptography>=48.0.1",
    "orjson>=3.11.3",
    "pyjwt[crypto]>=2.11.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.1.2",
    "asteval>=1.0.6",
    "urllib3>=2.7.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.1.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["deepsearch_rendering_job"]
