[project]
name = "ngsearch-storage"
dynamic = ["version"]
description = "NGSearch HTTP storage service — indexes and serves asset metadata"
authors = [
    {name = "Artem Rozantsev", email = "arozantsev@nvidia.com"},
    {name = "Rafal Wytrykus", email = "rwytrykus@nvidia.com"},
    {name = "Nikola Spasojevic", email = "nspasojevic@nvidia.com"},
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "search-utils[search-backend,storage-api]",
    "ngsearch-backend",
    "pydantic>=2.0",
    "pydantic-settings>=2.6.1",
    "opensearch-py>=3.0.0",
    "elasticsearch>=8.10.0",
    "typing-extensions>=4.9.0",
    "pyyaml>=6.0.2",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "aiohttp>=3.13",
]

[tool.uv]
package = true

[tool.uv.sources]
search-utils = { workspace = true }
ngsearch-backend = { workspace = true }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.1.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["storage"]
