[project]
name = "siglip2-triton-server"
version = "0.1.0"
description = "Server dependencies for SigLIP2 Triton"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tokenizers>=0.22.2",
    "transformers>=4.57.1",
    "pillow>=12.2.0",
    "numpy",
    "wheel>=0.46.3",
    "urllib3>=2.7.0",
    "starlette>=1.3.1",
]
